--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   encoding: unicode
   database: sample_app_development
   pool: 5
-  username: postgresql
+  username: postgres
   password: 12345
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -39,7 +39,7 @@ test:
   encoding: unicode
   database: sample_app_test
   pool: 5
-  username: postgresql
+  username: postgres
   password: 12345
 
 production:
@@ -47,5 +47,5 @@ production:
   encoding: unicode
   database: sample_app_production
   pool: 5
-  username: postgresql
+  username: postgres
   password: 12345
